package com.elingo.auth.entity;

public class User {
}
