package com.elingo.learning.entity;

public class Deck {
}
