package com.elingo.lesson.entity;

public class Lesson {
}
