package com.elingo.post.entity;

public class Post {
}
