package com.elingo.report.entity;

public class Report {
}
