package com.elingo.speakingRoom.entity;

public class SpeakingRoom {
}
